--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,262 @@
 /* Add your CSS to this file */
-body {
-    margin: 0;
-    font-size: 16px;
+
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 330px;
+    padding-right: 250px;
 }
 
-.container {
+nav ul {
+    list-style: none;
+
+    display: flex;
+}
+
+nav li {
+    margin-left: 10px;
+}
+
+nav a {
+    color: #6b7280;
+    text-decoration: none;
+}
+
+/*Overview Hero Here*/
+
+.overview-hero {
+    display: flex;
+    align-items: center;
+    background-color: #e2e8f0;
+}
+
+.overview-hero-image img {
+    width: 300px;
+    height: auto;
+}
+
+.overview-hero-text {
+    margin-left: 20px;
+}
+
+.overview-hero .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 800px;
     margin: 0 auto;
-    max-width: 960px;
-    width: 100%;
+}
+
+/*LEARN ABOUT*/
+.learn-about {
+    text-align: left;
+}
+
+.learn-about h2 {
+    padding-left: 30px;
+    font-size: 24px;
+    color: #48BB78;
+}
+
+.learn-about .cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+}
+
+.learn-about .card {
+    text-align: left;
+    border: 1px solid #E2E8F0;
+    border-radius: 5px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.learn-about .card img {
+    width: 300px;
+    height: 200px;
+}
+
+.learn-about .card h3 {
+    color: #48BB78;
+    font-size: 21px;
+}
+
+.learn-about .card-body {
+    margin-top: 10px;
+    padding-left: 20px;
+}
+
+.learn-about .container {
+    max-width: 800px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+}
+
+/*Test Covid 19*/
+
+.testing {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: left;
+    background-color: #4A5568;
+    color: white;
+}
+
+.testing-desciption {
+    max-width: 40%;
+    margin-top: 50px;
+    margin-left: 100px;
+    margin-bottom: 40px;
+}
+
+.cta {
+    text-align: left;
+}
+
+.cta .btn {
+    margin-left: 320px;
+    display: inline-block;
+    background-color: #48BB78;
+    border-radius: 5px;
+    color: white;
+    text-decoration: none;
+}
+
+.testing .container {
+    max-width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    text-align: left;
+}
+
+/*RECENT STORIES*/
+.stories .container {
+    display: flex;
+    flex-direction: column;
+    padding-left: 300px;
+    align-items: left;
+    margin-top: 100px;
+}
+
+.stories h2 {
+    text-align: left;
+    padding-left: 10px;
+    color: #5A67D8;
+}
+
+article {
+    display: flex;
+    align-items: center;
+    margin-bottom: 50px;
+}
+
+article img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.article-body h3 {
+    margin-top: 0;
+    width: 430px;
+    font-size: 18px;
+}
+
+.article-body {
+    flex: 1;
+    padding-left: 40px;
+    width: 600px;
+}
+
+.article-body p {
+    width: 560px;
+}
+
+.stories a {
+    color: #5A67D8;
+    text-decoration: none;
+}
+
+.stories a:hover {
+    color: #3B429F;
+}
+
+.article-body a {
+    text-decoration: none;
+    color: #007bff;
+}
+
+/*NewsLetter Section*/
+
+.newsletter {
+    text-align: center;
+}
+
+.newsletter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 60px;
+    background-color: #48BB78;
+    color: white;
+}
+
+.newsletter p {
+    width: 410px;
+}
+
+.newsletter form {
+    overflow: hidden;
+}
+
+.newsletter .form-group input {
+    float: left;
+    width: 260px;
+    height: 40px;
+    margin-bottom: 40px;
+}
+
+.newsletter .btn {
+    float: left;
+    margin-left: 10px;
+    height: 45px;
+    width: 130px;
+    margin-bottom: 40px;
+    background-color: #5A67D8;
+}
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+    font-size: 18px;
+}
+
+header {
+    background-color: white;
+}
+
+header h1,
+header nav ul li a {
+    font-size: 18px;
+}
+
+nav ul li a:hover {
+    color: #5a67d8;
+}
+
+
+
+
+footer {
+    background-color: #4A5568;
+    color: white;
+    height: 80px;
+}
+
+footer p {
+    margin-left: 120px;
 }
